Fixed reviewer corrections for Sprint 2 (font-family fallbacks, margins, widths, gaps, etc.)

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -5,6 +5,7 @@
   height: 800px;
   display: flex;
   flex-direction: column;
+  z-index: 1;
 }
 
 .header__title {
@@ -21,6 +22,7 @@
   font-family: "Noto Serif", "Times New Roman", serif;
   font-style: italic;
   color: #3f96f3;
+  font-weight: normal;
 }
 
 .header__description {
@@ -39,6 +41,7 @@
   right: 5px;
   width: 646px;
   height: 568px;
+  z-index: -1;
 }
 
 .header__footer {
