--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -12,6 +12,7 @@
   font-size: 44px;
   line-height: 52px;
   margin: 0 0 24px;
+  max-width: 580px;
 }
 
 .recipes__subtitle {
@@ -21,12 +22,13 @@
   font-weight: normal;
   font-size: 20px;
   line-height: 30px;
+  max-width: 438px;
 }
 
 .recipes__videos {
   display: flex;
   justify-content: center;
-  gap: 100px;
+  gap: 40px;
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -40,11 +42,12 @@
   font-weight: 500;
   font-size: 20px;
   line-height: 30px;
+  margin: 24px 0 0;
 }
 
 .recipes__iframe {
-  width: 560px;
-  height: 315px;
+  width: 480px;
+  height: 273px;
   border: 0;
   display: block;
 }
